--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,13 @@
 <h1>Editing Book</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<%= form_with model: @book do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+  
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+  
+  <%= f.submit 'Update Book' %>
+<% end %>  
+
+<a href="/books/:id">Show</a>
+<a href="/books">Back</a>
