--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Books</h1>
-  <h4>Title</h4>
-  
-  <h4>Body</h4>
-  
+  <%= @books.each do |book| %>
+    <h4>Title</h4>
+    <%= book.title %>
 
-<p>Find me in app/views/books/index.html.erb</p>
+    <h4>Body</h4>
+    <%= book.body %>
+  
+  <% end %>
+
 
 <h2>New book</h2>
   <%= form_with model: Book.new do |f| %>
