--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,15 @@
 <h1>Editing Book</h1>
+  <div class="error_explanation">
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  </div>
+
 <%= form_with model: @book do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
@@ -9,5 +20,5 @@
   <%= f.submit 'Update Book' %>
 <% end %>  
 
-<a href="/books/:id">Show</a>
-<a href="/books">Back</a>
+<%= link_to 'Show', book_path(@book.id) %>
+<%= link_to 'Back', books_path %>
