--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,37 @@
 <h1>Books</h1>
-  <%= @books.each do |book| %>
-    <h4>Title</h4>
-    <%= book.title %>
-
-    <h4>Body</h4>
-    <%= book.body %>
-  
-  <% end %>
-
+  <table>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th></th>
+    </tr>
+    
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td>
+          <%= link_to 'Show', book_path(book.id) %>
+          <%= link_to 'Edit', edit_book_path(book.id) %>
+          <%= link_to 'Destroy', book_path(book.id), method: :delete %>
+        </td>
+      </tr> 
+    <% end %>
+  </table>
 
 <h2>New book</h2>
+<!--エラー文を表示-->
+<div class="error_explanation">
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
+
   <%= form_with model: Book.new do |f| %>
     <h4>Title</h4>
     <%= f.text_field :title %>
