--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,15 @@
+<% if flash[:notice] %>
+  <div class="alert alert-primary" role="alert">
+    <%= notice %>
+  </div>
+<% end %>
+
 <h1>title:</h1>
+  <%= @book.title %>
 
 <h1>Body:</h1>
+  <%= @book.body %><br>
+  
 
-<a href="/books/:id/edit">Edit</a>
-<a href="/books">Back</a>
+<%= link_to 'Edit', edit_book_path(@book.id) %>
+<%= link_to 'Back', books_path(@book.id) %>
